--- a/style.css
+++ b/style.css
@@ -153,3 +153,72 @@
 .card .read a:hover {
     text-decoration: 2px underline;
 }
+
+/* how to contribute */
+.how-to-contribute {
+    padding: 50px 0;
+}
+
+.contribute {
+    display: flex;
+    justify-content: space-between;
+    gap: 100px;
+    margin-bottom: 70px;
+}
+
+.contribute img {
+    width: 45%;
+    margin-right: 30px;
+    border-radius: 10px;
+}
+
+/* update */
+.update {
+    text-align: center;
+    margin-bottom: 80px;
+}
+
+.update-input {
+    background: #FFF4D6;
+    width: 50%;
+    margin: auto;
+    padding: 50px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.update-input input{
+    background: #D9D9D9;
+    border-radius: 5px 0px 0px 5px;
+    padding: 10px 15px;
+    outline: none;
+    border: none;
+}
+.update-input span{
+    background-color: #FF5959;
+    border-radius: 0px 5px 5px 0px;
+    padding: 8px 14px;
+    color: #fff;
+    cursor: pointer;
+}
+
+/* footer */
+
+footer{
+    background: #0B0D17;
+    text-align: center;
+    padding: 20px;
+}
+footer h4{
+    color: #FF5959;
+    font-family: 'Lobster', cursive;
+    font-size: 30px;
+    font-weight: 500;
+    word-spacing: 5px;
+    margin-bottom: 6px;
+}
+footer p{
+    color: #fff;
+    font-size: 13px;
+}
