--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 
 /* banner */
 .banner {
-    background-image: url(images/donation2.jpg);
+    background-image: url(images/donation0.jpg);
     background-color: rgba(0, 0, 0, .5);
     background-blend-mode: multiply;
     background-repeat: no-repeat;
@@ -229,4 +229,87 @@ footer h4{
 footer p{
     color: #fff;
     font-size: 13px;
+}
+
+/* responsive part */
+
+
+
+@media screen and (max-width: 776px) {
+   .banner-details{
+    padding: 30px;
+   }
+   .banner-details h2 {
+    font-size: 25px;
+    font-weight: 600;
+}
+.banner-details p {
+    margin-bottom: 10px;
+}
+    .donate-today {
+        padding: 20px 0;
+    }
+    .title {
+        font-size: 25px;
+        font-weight: 550;
+    }
+    .pera {
+        font-size: 13px;
+        padding: 15px 0;
+    }
+    .amount ul {
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+    }
+    .amount ul li {
+        padding: 15px 10px;
+        background: #FAFAFA;
+        font-size: 17px;
+        font-weight: 500;
+        margin-bottom: 5px;
+    }
+    .amount input {
+        width: 55%;
+    }
+    .amount hr{
+        width: 60%;
+    }
+    .donate-card {
+        gap: 20px;
+        flex-direction: column;
+    }
+    .how-to-contribute {
+        padding: 20px 0;
+    }
+    .contribute {
+        gap: 20px;
+        margin-bottom: 40px;
+        flex-direction: column; 
+    }
+    .contribute .pera{
+        margin-bottom: 10px;
+    }
+    .contribute1{
+        flex-direction: column-reverse;
+    }
+    
+    .contribute img {
+        width: 100%;
+    }
+    .update {
+        margin-bottom: 20px;
+    }
+    .update-input {
+        width: 90%;
+        margin: 0 auto;
+        padding: 20px 10px;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+    .update-input input, .update-input span {
+        border-radius:5px;
+        margin-bottom: 5px;
+    }
 }
